--- a/service.yml
+++ b/service.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - image: mariadb
-        name: apache
+        name: wpdb
 
 ---
 
@@ -30,3 +30,38 @@ spec:
   type: ClusterIP
   selector:
     app: wpdb
+
+---
+
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  name: wpweb
+  labels:
+    app: wpweb
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: wpweb
+  template:
+    metadata:
+      labels:
+        app: wpweb
+    spec:
+      containers:
+      - image: wordpress
+        name: wpweb
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: wpweb
+spec:
+  ports:
+    - port: 80
+  type: LoadBalancer
+  selector:
+    app: wpweb
